site/css/index.css
@font-face { font-family: NokiaFC; src: url('../fonts/nokiafc22.ttf'); } 

body {
  font-family: NokiaFC;
  font-size: 14px;
/*  background-color: #847e87;*/
  background-image: url(../img/background0.png);
	
  image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
  image-rendering: -moz-crisp-edges;          /* Firefox                        */
  image-rendering: -o-crisp-edges;            /* Opera                          */
  image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
  image-rendering: pixelated; /* Chrome */
  image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
  -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */	
}

.smooth-render {	
  image-rendering: auto;
  -ms-interpolation-mode: bicubic;
}

.shadow-down-2px {
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;

	-webkit-box-shadow: 0px 2px 0px 0px rgba(0,0,0,0.2);
	-moz-box-shadow: 0px 2px 0px 0px rgba(0,0,0,0.2);
	box-shadow: 0px 2px 0px 0px rgba(0,0,0,0.2);
}
.thumb-cell {
	margin-bottom: 48px;
	z-index: 1
}
.thumb-holder {
	display: inline-block;
	position: relative;
	width: 320px;	
  	text-shadow: 0 2px rgba(0,0,0,0.1);
	
	border-style: solid;
	border-width: 4px 4px 8px;
	-moz-border-image: url('../img/pane0-bg.png') 4 4 8 repeat;
	-webkit-border-image: url('../img/pane0-bg.png') 4 4 8 repeat;
	-o-border-image: url('../img/pane0-bg.png') 4 4 8 repeat;
	border-image: url('../img/pane0-bg.png') 4 4 8 fill repeat;
}
.thumb-image-container {
	position: relative;
	display: block;
	width: 100%;
	height: 192px;
	margin-bottom: 12px;
}
.thumb-image-container:after {
	position: absolute;
	content: "";
	width: 100%;
	height: 100%;
	left: 0;	
	top: 0;
	background-color: #472f1f;
	opacity: 0.5;
	z-index: 3;
}
.thumb-image {
	border: 2px #d7b098 solid;
	width: 100%;
	height: 100%;	
/*
	-webkit-filter: sepia(50%) hue-rotate(-15deg) brightness(70%);
	-ms-filter: sepia(90%) brightness(75%) hue-rotate(-20deg);
    filter: sepia(90%) brightness(75%) hue-rotate(-20deg);
*/
}
/*
.thumb-image:hover {
    -webkit-filter: none;
    -ms-filter: none;
    filter: none;
}
*/
.thumb-icon {   
	position: absolute;
	width: 96px;
	height: 96px;
	margin-left: -48px;
	left: 50%;
	top: -16px;
	z-index: 10;
	
	background-color: #eee;
	border: 2px #8a6955 solid;
	padding: 2px;
	
	-webkit-box-shadow: 0px 2px 0px 0px rgba(0,0,0,0.15);
	-moz-box-shadow: 0px 2px 0px 0px rgba(0,0,0,0.15);
	box-shadow: 0px 2px 0px 0px rgba(0,0,0,0.15);
}
.thumb-title {
	color: #826351;
	font-size: 32px;
	margin-bottom: 0;
}
.thumb-subtitle {
	color: #826351;
	font-size: 24px;
	margin-top: -8px;
	margin-bottom: 6px;
}
.thumb-desc {
	max-width: 300px;
	color: #a3816d;
	font-size: 16px;
  	text-shadow: 0 2px rgba(0,0,0,0.07);
	margin: auto;
	margin-bottom: 16px;
}
.thumb-available-text {
	color: #826351;
	font-size: 18px;
	margin-bottom: 2px;
}
.thumb-links-pane {
	display: block;
	background-color: #e3c2a3;
	margin: 0 2px 2px 2px;
	padding-top: 8px;
	padding-bottom: 4px;
}
.btn-app-link { 
	margin: 0 4px;
	float: left;
	background-size: 100% 100%;
	width: 48px;
	height: 50px;
	display: inline;
}
.btn-appstore {
	background-image: url("../img/btn-thumb-ios-up.png");
}
.btn-appstore:active, .btn-appstore:hover {
	background-image: url("../img/btn-thumb-ios-down.png");
}
.btn-android {
	background-image: url("../img/btn-thumb-android-up.png");
}
.btn-android:active, .btn-android:hover {
	background-image: url("../img/btn-thumb-android-down.png");
}
.btn-web {
	background-image: url("../img/btn-thumb-web-up.png");
}
.btn-web:active, .btn-web:hover {
	background-image: url("../img/btn-thumb-web-down.png");
}
.inactive-link {
   pointer-events: none;
   cursor: default;
}
.soon-badge {
	position: relative;
	left: -2px;
	top: 14px;
}
.btn-social-link {  
	margin: 0 4px;
	background-size: 100% 100%;
	width: 48px;
	height: 48px;
	float: left;
}
.btn-social-twit {
	background-image: url("../img/btn-social-twit-up.png");
}
.btn-social-twit:active, .btn-social-twit:hover {
	background-image: url("../img/btn-social-twit-down.png");
}
.btn-social-fb {
	background-image: url("../img/btn-social-fb-up.png");
}
.btn-social-fb:active, .btn-social-fb:hover {
	background-image: url("../img/btn-social-fb-down.png");
}
.btn-social-vk {
	background-image: url("../img/btn-social-vk-up.png");
}
.btn-social-vk:active, .btn-social-vk:hover {
	background-image: url("../img/btn-social-vk-down.png");
}
.btn-social-mail {
	background-image: url("../img/btn-social-mail-up.png");
}
.btn-social-mail:active, .btn-social-mail:hover {
	background-image: url("../img/btn-social-mail-down.png");
}
.section-title-bg {
	position: relative;
	margin: 0 -14px 40px -14px;
	padding: 8px 0;
	height: 70px;
	
	border-style: solid;
	border-width: 3px 70px 51px 56px;
	-moz-border-image: url(../img/section-title.png) 3 70 51 56 stretch;
	-webkit-border-image: url(../img/section-title.png) 3 70 51 56 stretch;
	-o-border-image: url(../img/section-title.png) 3 70 51 56 stretch;
	border-image: url(../img/section-title.png) 3 70 51 56 fill stretch;
}
.section-title-text {
	color: #826351;
	margin: 4px 0 0 0;
	text-shadow: 0 2px rgba(20%, 20%, 20%, 0.1);
	font-size: 24px;
}
.section-badge {
	position: absolute;
	top: 0;
	margin-top: -9px;
	margin-left: -300px;
}


#main-container {
	padding: 64px 0 40px 0;
	position: relative;
	border-style: solid;
	border-width: 0px 4px;
	-moz-border-image: url('../img/general-pane-bg.png') 0 4 repeat;
	-webkit-border-image: url('../img/general-pane-bg.png') 0 4 repeat;
	-o-border-image: url('../img/general-pane-bg.png') 0 4 repeat;
	border-image: url('../img/general-pane-bg.png') 0 4 fill repeat;
}
#main-container-background {
	position: absolute;
	width: 100%;
	height: 100%;
	margin-top: -80px;
	background-image: url(../img/content-background1.png);
}
#header-frame {
	position: relative;
	height: 50px; 
	padding: 0;
	z-index: 100;
}
#header-bg {
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;

	border-style: solid;
	border-width: 0px 0px 2px;
	-moz-border-image: url('../img/header-bg.png') 0 0 2 stretch;
	-webkit-border-image: url('../img/header-bg.png') 0 0 2 stretch;
	-o-border-image: url('../img/header-bg.png') 0 0 2 stretch;
	border-image: url('../img/header-bg.png') 0 0 2 fill stretch;
}
#header-shadow {
	position: absolute;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;

	-webkit-box-shadow: 0px 4px 0px 0px rgba(0,0,0,0.0625);
	-moz-box-shadow: 0px 4px 0px 0px rgba(0,0,0,0.0625);
	box-shadow: 0px 4px 0px 0px rgba(0,0,0,0.0625);
}
#img-logo {
	position: relative;
	margin-top: -46px;
	width: 267px;
	z-index: 999;
}
#about-pane {
	margin: auto;
	margin-bottom: 80px;
	max-width: 600px;
	position: relative;
	
	border-style: solid;
	border-width: 60px;
	-moz-border-image: url(../img/paper-pane.png) 60 stretch;
	-webkit-border-image: url(../img/paper-pane.png) 60 stretch;
	-o-border-image: url(../img/paper-pane.png) 60 stretch;
	border-image: url(../img/paper-pane.png) 60 fill stretch;
}
.about-text {
	margin: -24px;
	margin-bottom: -36px;
  	text-shadow: 0 2px rgba(0,0,0,0.05);
}
.about-text p {
	color: #755542;
}
#grounding-left {
	content: "";
	background-image: url('../img/grounding0-left.png');
	position: absolute;
	width: 232px;
	height: 120px;
	bottom: 0;
	left: -2px;
	z-index: 0;	
}
#grounding-right {
	content: "";
	background-image: url('../img/grounding0-right.png');
	position: absolute;
	width: 220px;
	height: 122px;
	bottom: 0;
	right: -4px;
	z-index: 0;
}
#face-holder {
	display: inline-block;
	position: absolute;
	bottom: 0;
	margin: auto;
	z-index: 1;	
}
#face-miha {
	position: absolute;
	right: -1px;
   	cursor: default;
	outline : none;
	bottom: -40px;
	
    -webkit-transition: margin-bottom 0.25s;
    transition: margin-bottom 0.25s;
}
#face-miha:hover {
	margin-bottom: 24px;
}
#face-antoha {
	position: absolute;
	left: -1px;
	bottom: -40px;
   	cursor: default;
	outline : none;
	
    -webkit-transition: margin-bottom 0.25s;
    transition: margin-bottom 0.25s;
}
#face-antoha:hover {
	margin-bottom: 24px;
}
#footer-frame {
	position: relative;
	background-color: #84dfe2;
	padding: 16px 0;		
	border-top: 2px solid rgb(179,242,237);
	z-index: 100;
}
#credits-text {
	color: #fff;
}

